# ii-sale-contract-v1

./: .dockerignore  .env.production  .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  FAQ.md  LICENSE  README.md  TERMS.md  VERIFY.md  dfx.json  package-lock.json  package.json
backend/api/: Cargo.toml  can.did
backend/api/src/queries/: get_holder_events.rs  get_holder_information_query.rs  mod.rs  (+1 more)
backend/candid/: Cargo.toml
backend/candid/src/: main.rs
backend/impl/: Cargo.toml
backend/impl/src/: guards.rs  lib.rs
backend/impl/src/components/: factory.rs  mod.rs  referral.rs
backend/impl/src/handlers/: cycles_calculator.rs  mod.rs  rewards_calculator.rs  wallet.rs
backend/impl/src/handlers/holder/: factory.rs  mod.rs  processor.rs
backend/impl/src/handlers/holder/states/: cancel_sale_deal.rs  check_accounts_for_no_approve_prepare.rs  check_accounts_for_no_approve_sequential.rs  check_confirmation_holder_registration_expiry.rs  check_confirmation_owner_registration_expiry.rs  check_holder_contract_principals.rs  check_quarantine_completed.rs  confirm_authn_method_registration.rs  create_ecdsa_key.rs  delete_holder_authn_method.rs  delete_identity_authn_methods.rs  delete_neurons_hotkeys.rs  disable_identity_mcp_config.rs  enter_authn_method_registration_mode.rs  exit_and_register_holder_authn_method.rs  exit_orphaned_registration_mode.rs  finish_capture.rs  finish_check_assets.rs  finish_fetch_assets.rs  get_accounts_balances.rs  get_accounts_information.rs  get_holder_contract_accounts.rs  get_holder_contract_principal.rs  get_identity_accounts.rs  get_neurons_ids.rs  get_neurons_information.rs  mod.rs  obtain_identity_authn_methods.rs  obtain_identity_mcp_config.rs  prepare_delegation.rs  process_holding_state.rs  refund_buyer_from_transit_account.rs  register_holder_authn_method_session.rs  resolve_referral_reward_data.rs  sleep_processing.rs  start_accept_sale_deal.rs  start_capture.rs  start_check_assets.rs  start_fetch_assets.rs  start_holding.rs  (+8 more)
backend/impl/src/lifecycle/: init.rs  mod.rs  post_upgrade.rs
backend/impl/src/model/: mod.rs
backend/impl/src/model/holder/: mod.rs
backend/impl/src/model/holder/events/: assets.rs  capture.rs  check.rs  delegation.rs  holding.rs  mod.rs  release.rs  sale.rs
backend/impl/src/queries/: mod.rs  transform_http_response.rs
backend/impl/src/queries/contract/: get_canister_metrics.rs  mod.rs
backend/impl/src/queries/holder/: get_holder_events.rs  get_holder_information_query.rs  mod.rs
backend/impl/src/state/: mod.rs
backend/impl/src/test/: mod.rs
backend/impl/src/test/tests/: activate_contract.rs  add_contract_controller.rs  check_assets.rs  expiration.rs  fetch_assets.rs  holder_auth_registration.rs  releasing.rs  rewards_calculator.rs  sale.rs  start_capture.rs
backend/impl/src/test/tests/components/: allowance_ledger.rs  ecdsa.rs  ic.rs  ic_agent.rs  ic_management.rs  icrc2_ledger.rs  identity.rs  ledger.rs  logger.rs  mod.rs  rand.rs  referral.rs  time.rs  timer.rs
backend/impl/src/test/tests/drivers/: capture.rs  fetch.rs  hold.rs  mod.rs
backend/impl/src/test/tests/support/: fixtures.rs  mocks.rs  mod.rs
backend/impl/src/updates/: mod.rs
backend/impl/src/updates/contract/: activate_contract.rs  add_contract_controller.rs  get_contract_certificate.rs  get_contract_owner.rs  mod.rs
backend/impl/src/updates/holder/: accept_buyer_offer.rs  accept_seller_offer.rs  cancel_buyer_offer.rs  cancel_capture_identity.rs  cancel_sale_intention.rs  change_sale_intention.rs  confirm_holder_authn_method_registration.rs  confirm_owner_authn_method_registration.rs  delete_holder_authn_method.rs  get_holder_information.rs  process_holder.rs  protected_authn_method_deleted.rs  receive_delegation.rs  restart_release_identity.rs  retry_prepare_delegation.rs  set_buyer_offer.rs  set_sale_intention.rs  set_sale_offer.rs  start_capture_identity.rs  start_release_identity.rs
frontend/: index.html  package.json  tsconfig.base.json  tsconfig.json  tsconfig.test.json  vite.config.js
frontend/src/: constants.ts  i18.tsx  vite-env.d.ts
frontend/src/components/: AppEntryPoint.tsx
frontend/src/context/: DelegationExpirationLogger.tsx  LoginNotificationHandler.tsx
frontend/src/css/: alert.css  antd_overrides.css  colors.css  projectSpecific.css  skeleton.css  typography.css  widget.css
frontend/src/hook/: useDynamicTick.ts  useDynamicTickForTargetTime.ts  useRemoteListWithUrlState.tsx  useWindowSize.ts
frontend/src/utils/: env.ts
src/declarations/contract/: contract.did  contract.did.d.ts  contract.did.js
src/declarations/hub/: hub.did.d.ts  hub.did.js
(+560 files in other folders)
