[package]
name = "contract_canister_impl"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
contract_canister_api = { path = "../api" }
referral_c2c_client =  { workspace = true }
common_canister_api =  { workspace = true }
common_canister_impl =  { workspace = true }
common_canister_types =  { workspace = true }
common_contract_api =  { workspace = true }
common_embed_assets =  { workspace = true }
candid = { workspace = true, features = ["value"] }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-ledger-types = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }
include_dir = { workspace = true }
ic-http-certification = { workspace = true }
ic-asset-certification = { workspace = true }
ic-signature-verification = { workspace = true }
secp256k1 = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(network, values("local", "test"))'] }
